--- a/electra1131/app/Base.lproj/Main.storyboard
+++ b/electra1131/app/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -24,18 +24,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h2M-vM-HNw" customClass="CSGradientView">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="467"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Combined Shape" translatesAutoresizingMaskIntoConstraints="NO" id="tZ9-9J-VWS">
-                                <rect key="frame" x="123" y="110" width="168" height="43"/>
+                                <rect key="frame" x="103.5" y="110" width="168" height="43"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jPt-Se-ZOo">
-                                <rect key="frame" x="100" y="281" width="214" height="105"/>
+                                <rect key="frame" x="80.5" y="246" width="214" height="105"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fB9-4u-Bfa">
                                         <rect key="frame" x="0.0" y="0.0" width="214" height="55"/>
@@ -114,7 +114,7 @@ Cg
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DoH-WZ-oqx">
-                                <rect key="frame" x="64" y="494" width="287" height="32"/>
+                                <rect key="frame" x="44" y="425" width="287" height="32"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brought to you by the " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fC-j2-0wp">
                                         <rect key="frame" x="0.0" y="0.0" width="168" height="32"/>
@@ -135,10 +135,10 @@ Cg
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5QN-ZM-Myu">
-                                <rect key="frame" x="0.0" y="536" width="414" height="200"/>
+                                <rect key="frame" x="0.0" y="467" width="375" height="234"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NcJ-fY-tUf">
-                                        <rect key="frame" x="57" y="105" width="300" height="50"/>
+                                        <rect key="frame" x="37.5" y="105" width="300" height="50"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="KxP-El-C5i"/>
@@ -158,7 +158,7 @@ Cg
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFy-KQ-Zk5">
-                                        <rect key="frame" x="57" y="45" width="300" height="50"/>
+                                        <rect key="frame" x="37.5" y="45" width="300" height="50"/>
                                         <subviews>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ggt-pB-Zy0">
                                                 <rect key="frame" x="242" y="10" width="51" height="31"/>
@@ -168,7 +168,7 @@ Cg
                                                 </connections>
                                             </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweaks" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4H6-RC-SIx">
-                                                <rect key="frame" x="18" y="14.666666666666631" width="80" height="21.666666666666671"/>
+                                                <rect key="frame" x="18" y="15" width="80" height="21.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="80" id="UAb-4G-vmf"/>
                                                 </constraints>
@@ -196,10 +196,10 @@ Cg
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="tFy-KQ-Zk5" firstAttribute="centerX" secondItem="5QN-ZM-Myu" secondAttribute="centerX" id="3bn-iT-Zkv"/>
-                                    <constraint firstAttribute="height" constant="200" id="9SE-Qq-iy3"/>
+                                    <constraint firstAttribute="height" constant="234" id="9SE-Qq-iy3"/>
                                     <constraint firstItem="tFy-KQ-Zk5" firstAttribute="top" secondItem="5QN-ZM-Myu" secondAttribute="top" constant="45" id="eA0-ZR-1vx"/>
                                     <constraint firstItem="NcJ-fY-tUf" firstAttribute="centerX" secondItem="5QN-ZM-Myu" secondAttribute="centerX" id="wtW-Ds-Lbi"/>
-                                    <constraint firstAttribute="bottom" secondItem="NcJ-fY-tUf" secondAttribute="bottom" constant="45" id="z7r-jO-o5B"/>
+                                    <constraint firstAttribute="bottom" secondItem="NcJ-fY-tUf" secondAttribute="bottom" constant="79" id="z7r-jO-o5B"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -211,7 +211,7 @@ Cg
                             <constraint firstItem="5QN-ZM-Myu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Rpm-wp-Xqb"/>
                             <constraint firstItem="h2M-vM-HNw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="SQa-fY-qUJ"/>
                             <constraint firstItem="tZ9-9J-VWS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="T2A-FM-1nl"/>
-                            <constraint firstItem="5QN-ZM-Myu" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="TKg-ws-5VP"/>
+                            <constraint firstItem="5QN-ZM-Myu" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="34" id="TKg-ws-5VP"/>
                             <constraint firstItem="5QN-ZM-Myu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="g4G-dH-HRj"/>
                             <constraint firstItem="tZ9-9J-VWS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jpJ-K5-5ek"/>
                             <constraint firstItem="jPt-Se-ZOo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="q37-63-oKF"/>
@@ -234,7 +234,7 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28.985507246376812" y="31.793478260869566"/>
+            <point key="canvasLocation" x="28" y="31.773399014778327"/>
         </scene>
     </scenes>
     <resources>
