--- a/electra1131/app/Base.lproj/Main.storyboard
+++ b/electra1131/app/Base.lproj/Main.storyboard
@@ -9,11 +9,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="SFProText-Bold.ttf">
-            <string>SFProText-Bold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -40,7 +35,7 @@
                                             <constraint firstAttribute="width" constant="214" id="SGJ-yY-DjS"/>
                                             <constraint firstAttribute="height" constant="55" id="pfr-TV-NDw"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="20"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <state key="normal" title="Jailbreak">
                                             <color key="titleColor" red="0.28235294117647058" green="0.3529411764705882" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
