--- a/electra1131/app/Base.lproj/Main.storyboard
+++ b/electra1131/app/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -89,38 +90,18 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5QN-ZM-Myu">
                                 <rect key="frame" x="0.0" y="467" width="375" height="234"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NcJ-fY-tUf">
-                                        <rect key="frame" x="37.5" y="105" width="300" height="50"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="KxP-El-C5i"/>
-                                            <constraint firstAttribute="height" constant="50" id="iuB-vI-mzP"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
-                                        <state key="normal" title="Credits">
-                                            <color key="titleColor" red="0.25630999999999998" green="0.30879000000000001" blue="0.38431999999999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="10"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="credits:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ItC-L9-2RY"/>
-                                        </connections>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFy-KQ-Zk5">
-                                        <rect key="frame" x="37.5" y="45" width="300" height="50"/>
+                                        <rect key="frame" x="38" y="45" width="300" height="50"/>
                                         <subviews>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ggt-pB-Zy0">
-                                                <rect key="frame" x="242" y="10" width="51" height="31"/>
+                                                <rect key="frame" x="242" y="9.5" width="51" height="31"/>
                                                 <color key="onTintColor" red="0.25490196078431371" green="0.30980392156862746" blue="0.38431372549019605" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <connections>
                                                     <action selector="enableTweaksChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="P1T-f3-9Nm"/>
                                                 </connections>
                                             </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweaks" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4H6-RC-SIx">
-                                                <rect key="frame" x="18" y="15" width="80" height="21.5"/>
+                                                <rect key="frame" x="18" y="14.5" width="80" height="21.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="80" id="UAb-4G-vmf"/>
                                                 </constraints>
@@ -144,14 +125,67 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dbk-ev-Bdv">
+                                        <rect key="frame" x="38" y="105" width="300" height="50"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ll4-6Q-Yds">
+                                                <rect key="frame" x="155" y="0.0" width="145" height="50"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                <state key="normal" title="Set Generator">
+                                                    <color key="titleColor" red="0.25630999999999998" green="0.30879000000000001" blue="0.38431999999999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="10"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="tappedOnSetGenerator:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vp0-3Y-ZUw"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NcJ-fY-tUf">
+                                                <rect key="frame" x="0.0" y="0.0" width="145" height="50"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="145" id="KxP-El-C5i"/>
+                                                    <constraint firstAttribute="height" constant="50" id="iuB-vI-mzP"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                <state key="normal" title="Credits">
+                                                    <color key="titleColor" red="0.25630999999999998" green="0.30879000000000001" blue="0.38431999999999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="10"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="credits:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ItC-L9-2RY"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="NcJ-fY-tUf" firstAttribute="top" secondItem="dbk-ev-Bdv" secondAttribute="top" id="DBf-7b-xWM"/>
+                                            <constraint firstItem="Ll4-6Q-Yds" firstAttribute="leading" secondItem="NcJ-fY-tUf" secondAttribute="trailing" constant="10" id="O57-Zn-UGo"/>
+                                            <constraint firstItem="Ll4-6Q-Yds" firstAttribute="top" secondItem="NcJ-fY-tUf" secondAttribute="top" id="ZG5-VI-IX7"/>
+                                            <constraint firstItem="NcJ-fY-tUf" firstAttribute="leading" secondItem="dbk-ev-Bdv" secondAttribute="leading" id="bF0-Sv-RGu"/>
+                                            <constraint firstItem="Ll4-6Q-Yds" firstAttribute="firstBaseline" secondItem="NcJ-fY-tUf" secondAttribute="baseline" id="e8T-Q1-zsw"/>
+                                            <constraint firstAttribute="bottom" secondItem="NcJ-fY-tUf" secondAttribute="bottom" id="nCF-RR-CaM"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ll4-6Q-Yds" secondAttribute="trailing" id="sbq-RI-Rty"/>
+                                            <constraint firstAttribute="width" constant="300" id="wEM-5h-aaG"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="dbk-ev-Bdv" firstAttribute="leading" secondItem="tFy-KQ-Zk5" secondAttribute="leading" id="1fO-zb-Ga2"/>
                                     <constraint firstItem="tFy-KQ-Zk5" firstAttribute="centerX" secondItem="5QN-ZM-Myu" secondAttribute="centerX" id="3bn-iT-Zkv"/>
                                     <constraint firstAttribute="height" constant="234" id="9SE-Qq-iy3"/>
+                                    <constraint firstItem="dbk-ev-Bdv" firstAttribute="top" secondItem="tFy-KQ-Zk5" secondAttribute="bottom" constant="10" id="LEs-Db-n8K"/>
                                     <constraint firstItem="tFy-KQ-Zk5" firstAttribute="top" secondItem="5QN-ZM-Myu" secondAttribute="top" constant="45" id="eA0-ZR-1vx"/>
-                                    <constraint firstItem="NcJ-fY-tUf" firstAttribute="centerX" secondItem="5QN-ZM-Myu" secondAttribute="centerX" id="wtW-Ds-Lbi"/>
-                                    <constraint firstAttribute="bottom" secondItem="NcJ-fY-tUf" secondAttribute="bottom" constant="79" id="z7r-jO-o5B"/>
+                                    <constraint firstItem="dbk-ev-Bdv" firstAttribute="trailing" secondItem="tFy-KQ-Zk5" secondAttribute="trailing" id="jtm-UX-xNq"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -182,6 +216,7 @@
                         <outlet property="compatibilityLabel" destination="742-v6-jJT" id="p1S-XL-d8O"/>
                         <outlet property="enableTweaks" destination="Ggt-pB-Zy0" id="6p8-EF-Uec"/>
                         <outlet property="jailbreak" destination="fB9-4u-Bfa" id="Qhc-Ja-xmU"/>
+                        <outlet property="setGenerator" destination="Ll4-6Q-Yds" id="G5U-bp-tD2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
